--- a/app/globals.scss
+++ b/app/globals.scss
@@ -7,7 +7,7 @@
 }
 
 // Uncomment line below if design system is needed
-// @import "src/styles/design-system";
+@import "src/styles/design-system";
 
 body {
   @apply bg-primary-bg text-primary-font;
